# dynamic_containment

./: README.md  pyproject.toml  requirements.txt  setup.cfg
dynamic_containment/: __init__.py  utils.py  utils.py~
jupyter/: analysing_the_models.ipynb  analysis.ipynb  develop_tests.ipynb  dynamic_containment.ipynb  main_anaylsis.ipynb  modelling_frequency_data.ipynb  modelling_the_data.ipynb
