[metadata]
; UPDATE with your details:
name = retail-simulations
version = attr: retail_simulations.__version__
author = Lee Whittaker
author_email = lee.whittaker@peak.ai
description = FILL IN
long_description = file: README.md
long_description_content_type = 
url = https://github.com/LeeWhittaker369/dynamic_containment
project_urls =

classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
;

[options.extras_require]
test =
; Add any test requirements here.
; `pip install -e .[test]` will install all these requirements
    pytest>=6.2.3
    pytest-randomly
    pytest-mock
dev =
; Add any development requirements here.
    pre-commit>=2.11.0

[flake8]
max-line-length = 88
max-complexity = 10
select = B,C,E,F,W,B950
ignore = E203,E501,W503
exclude =
    .git,
    __pycache__,
    docs,
    build,
    dist

[pydocstyle]
convention = numpy
add-ignore = D100,D104,D105,D203,D405

[isort]
profile = black
; UPDATE `src_paths` for your package
src_paths = example_package,tests
skip = docs,build,examples,resources
